[package]
name = "crust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
scoped_threadpool = "0.1.*"
itertools = "0.8.2"