[package]
name = "crust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
scoped_threadpool = "0.1.*"
itertools = "0.9.0"
multimap = "0.8.1"
slugify = "0.1.0"